WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140274
[iOS] Cannot paste an image URL in a plain text field in a page
https://bugs.webkit.org/show_bug.cgi?id=140274
Summary
[iOS] Cannot paste an image URL in a plain text field in a page
Enrica Casucci
Reported
2015-01-08 15:47:24 PST
Launch Safari and navigate to a page that has an image. Tap and hold to bring up the action sheet and choose Copy. Navigate to a page that has a text field and tap to focus it. Tap again to bring up the menu. Expected The menu shows the Paste option. Actual Nothing happens.
rdar://problem/18590809
Attachments
Patch
(5.57 KB, patch)
2015-01-08 15:55 PST
,
Enrica Casucci
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2015-01-08 15:55:15 PST
Created
attachment 244307
[details]
Patch
Enrica Casucci
Comment 2
2015-01-09 10:31:36 PST
Committed revision 178175.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug