[iOS] Cannot paste an image URL in a plain text field in a page. https://bugs.webkit.org/show_bug.cgi?id=140274 rdar://problem/18590809

Reviewed by Alexey Proskuryakov.

Source/WebCore:

When we want to get plain text from the pasteboard, we
should also try kUTTypeURL if there is no kUTTypeText available.

* WebCore.exp.in:
* platform/ios/PasteboardIOS.mm:
(WebCore::Pasteboard::read):
* platform/ios/PlatformPasteboardIOS.mm:
(WebCore::PlatformPasteboard::readString):

Source/WebKit2:

supportedPasteboardTypesForCurrentSelection should include kUTTypeURL for plain
text controls and WebArchivePboardType for rich text controls.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView supportedPasteboardTypesForCurrentSelection]): Remove obsolete and
incorrect FIXME.



Canonical link: https://commits.webkit.org/158262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178175 268f45cc-cd09-0410-ab3c-d52691b4dbfc